# TheLeiOS

./: .clang-format  .editorconfig  .gdbinit  .gitignore  .gitmodules  LICENSE  Makefile  README.md  builder_Dockerfile  install-grub-on-osx.sh  install-grub.sh  workspace.code-workspace
c/: .gitignore  Dockerfile  README.md  build-docker-image.sh  build-on-docker.sh  build.sh  grub.cfg  run-on-qemu.sh
c/src/: Makefile  boot.asm  main.c  vgastr.h
kernel/: Makefile  boot.asm  cpuid.c  cpuid.h  debug.c  debug.h  io.c  io.h  keyboard.h  libk.c  libk.h  main.c  main.cc  nostdlib.c  nostdlib.h  os.h  types.h  vga.c  vga.h  vgastr.c  vgastr.h
kernel/arch/i386/: all.h  cpuid.cc  cpuid.h  idt.h  io.cc  io.h  isr.cc  isr.h  memory.cc  memory.h  port.cc  port.h  ports.h  timer.cc  timer.h
kernel/cpu/: idt.c  idt.h  isr.c  isr.cc  isr.h  ports.c  ports.h  timer.c  timer.cc  timer.h
kernel/drivers/: all.h  keyboard.c  keyboard.cc  keyboard.h  vgagraph.cc  vgagraph.h  vgatext.c  vgatext.cc  vgatext.h
kernel/libk/: all.h  debug.c  debug.cc  debug.h  libk.c  libk.cc  libk.h  types.h
rust/: Cargo.toml  Dockerfile  README.md  build-docker-image.sh  build-on-docker.sh  build.sh  build2.sh  run-on-qemu.sh  setup.sh
rust/.cargo/: config.toml
rust/src/: main.rs
tools/objconv/: .gitignore  cmdline.cpp  cof2elf.cpp  coff.h  containers.h  disasm.h  disasm1.cpp  disasm2.cpp  elf2cof.cpp  elf2elf.cpp  library.cpp  maindef.h  objconv.sln  objconv.vcxproj  opcodes.cpp
