cargo-features = ["edition2021"]

[package]
authors = ["Zongmin Lei <leizongmin@gmail.com>"]
edition = "2021"
name = "leios"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
